//package MsgLoginGate;
package msg;
import "define.proto";

// gw请求注册到login
message GW2L_ReqRegist {
    optional string account = 1;
    optional string passwd  = 2;
    optional msg.IpHost host = 3;
}


// 注册返回
message L2GW_RetRegist {
    optional string errocde = 1;
    optional msg.IpHost host = 2;
}


// 心跳
message GW2L_HeartBeat {
}


// 
message L2GW_HeartBeat {
}


// 玩家登陆ls成功，注册他到相应的Gw
message L2GW_ReqRegistUser {
    optional string account = 1;
    optional int64  expire  = 2;
    optional string gatehost = 3;
    optional int32  sid = 4;     // 玩家在Login的Taskid
    optional int64  timestamp = 5;
    optional string verifykey = 6;
}


// 注册返回
message GW2L_RegistUserRet {
    optional string account  = 1;
    optional string gatehost = 2;
    optional string errcode  = 3;
    optional int32  sid = 4;
    optional string verifykey = 5;
}


