//package MsgClientLogin;
package msg;
import "define.proto";

// 客户端请求登陆
message C2L_ReqLogin {
    optional string account = 1;
    optional string passwd  = 2;
}


// 返回登陆验证结果
message L2C_RetLogin {
    optional int32  result = 1;     // 0失败，1成功
    optional string reason = 2;     // 失败原因
    optional msg.IpHost gatehost = 3;
    optional string verifykey = 5;  // 客户端使用这个key登陆网关
}

// 注册账户--第一步 请求验证码
message C2L_ReqRegistAuthCode {
    optional string phone = 1;
}


// 注册账户--第二步
message C2L_ReqRegistAccount {
    optional string phone = 1;
    optional string passwd = 2;
    optional string authcode = 3;
    optional string invitationcode = 4;
    optional string nickname = 5;
}


// 注册返回
message L2C_RetRegistAccount {
    optional string errcode = 1;
}


